<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent"
              tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
            android:padding="@dimen/global_unit_bigger"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textStyle="bold"
                    android:text="@string/fajr"
                    android:textSize="@dimen/text_global_unit_bigger_x"
                    android:textColor="@color/md_grey_700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/wake_up_fajr"
                    android:textSize="@dimen/text_global_unit_normal"
                    android:textColor="@color/md_grey_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <Switch
                android:id="@+id/swFajr"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="70"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
            android:padding="@dimen/global_unit_bigger"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textStyle="bold"
                    android:text="@string/dhuhr"
                    android:textSize="@dimen/text_global_unit_bigger_x"
                    android:textColor="@color/md_grey_700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/wake_up_dhuhr"
                    android:textSize="@dimen/text_global_unit_normal"
                    android:textColor="@color/md_grey_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <Switch
                android:id="@+id/swDhuhr"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="70"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
            android:padding="@dimen/global_unit_bigger"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textStyle="bold"
                    android:text="@string/asr"
                    android:textSize="@dimen/text_global_unit_bigger_x"
                    android:textColor="@color/md_grey_700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/wake_up_asr"
                    android:textSize="@dimen/text_global_unit_normal"
                    android:textColor="@color/md_grey_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <Switch
                android:id="@+id/swAsr"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="70"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
            android:padding="@dimen/global_unit_bigger"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textStyle="bold"
                    android:text="@string/maghrib"
                    android:textSize="@dimen/text_global_unit_bigger_x"
                    android:textColor="@color/md_grey_700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/wake_up_maghrib"
                    android:textSize="@dimen/text_global_unit_normal"
                    android:textColor="@color/md_grey_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <Switch
                android:id="@+id/swMaghrib"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="70"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
            android:padding="@dimen/global_unit_bigger"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textStyle="bold"
                    android:text="@string/isha"
                    android:textSize="@dimen/text_global_unit_bigger_x"
                    android:textColor="@color/md_grey_700"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/wake_up_isha"
                    android:textSize="@dimen/text_global_unit_normal"
                    android:textColor="@color/md_grey_500"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <Switch
                android:id="@+id/swIsha"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="70"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>