<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:minHeight="@dimen/global_unit_bigger_xxxxxxxxxxxxxxxx">
    <LinearLayout
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:padding="@dimen/global_unit_bigger"
                android:orientation="vertical"
                android:layout_weight="30"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:paddingBottom="@dimen/global_unit_smaller"
                    android:paddingTop="@dimen/global_unit_normal"
                    android:paddingEnd="@dimen/global_unit_normal"
                    android:paddingStart="@dimen/global_unit_normal"
                    android:id="@+id/tvArabicName"
                    android:textSize="@dimen/text_global_unit_bigger_xxxxxx"
                    android:textStyle="bold"
                    android:textColor="@color/md_grey_900"
                    android:text="@string/test_arabic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:textColor="@color/md_grey_700"
                    android:id="@+id/tvTransliteration"
                    android:textSize="@dimen/text_global_unit_bigger"
                    android:text="@string/test_transliteration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:textColor="@color/md_grey_500"
                    android:id="@+id/tvMeaning"
                    android:textSize="@dimen/text_global_unit_bigger"
                    android:text="@string/test_meaning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>