<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_marginLeft="@dimen/mtrl_card_spacing"
        android:layout_marginTop="@dimen/mtrl_card_spacing"
        android:layout_marginRight="@dimen/mtrl_card_spacing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
            android:paddingTop="@dimen/global_unit_smaller"
            android:paddingBottom="@dimen/global_unit_smaller"
            android:paddingEnd="@dimen/global_unit_smaller"
            android:paddingStart="@dimen/global_unit_smaller"
            style="@style/Widget.MaterialComponents.CardView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textColor="@color/md_grey_700"
                android:textStyle="bold"
                android:padding="@dimen/global_unit_smaller"
                android:maxLines="3"
                android:textSize="@dimen/text_global_unit_bigger_xxxxxx"
                android:text="@string/longestSurah"
                android:id="@+id/tvArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <View
                android:padding="@dimen/text_global_unit_bigger_xxxxxx"
                android:background="@color/md_grey_100"
                android:layout_width="match_parent"
                android:layout_height="@dimen/global_unit_smaller_xxxxxx"/>
        <TextView
                android:textColor="@color/md_grey_500"
                android:maxLines="3"
                android:padding="@dimen/global_unit_smaller"
                android:text="@string/some_description"
                android:id="@+id/tvTransliteration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:textColor="@color/md_grey_500"
                android:padding="@dimen/global_unit_smaller"
                android:maxLines="3"
                android:text="@string/some_description"
                android:id="@+id/tvTranslation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <View
                android:padding="@dimen/text_global_unit_bigger_xxxxxx"
                android:background="@color/md_grey_100"
                android:layout_width="match_parent"
                android:layout_height="@dimen/global_unit_smaller_xxxxxx"/>
        <LinearLayout
                android:padding="@dimen/global_unit_smaller"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="100"
                android:layout_height="wrap_content">
            <TextView
                    android:textColor="@color/md_grey_700"
                    android:textSize="@dimen/text_global_unit_bigger"
                    android:textStyle="bold"
                    android:gravity="bottom"
                    android:text="@string/some_number"
                    android:layout_weight="98"
                    android:id="@+id/tvTasbeehNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabIncrement"
                    android:layout_weight="2"
                    app:fabSize="auto"
                    android:src="@drawable/ic_heart_white"
                    app:elevation="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>